Ext 4.2.1: More fixes. - Test fixes for ChartingAPI and DataReports

--- a/core/webapp/stylesheet.css
+++ b/core/webapp/stylesheet.css
@@ -4188,11 +4188,6 @@ div.facet_header .x4-panel-header-text
     margin-top: 0px;
 }
 
-.x4-form-text
-{
-    height : 24px;
-}
-
 .x4-form-checkbox,
 .x4-form-radio
 {
